Fix z-index on user account drop-down
Added a z-index property to lists in accountnav to have the contents of the
account dropdowns not be concealed by the changelist-filter in admin dashboard
while managing users.

Testing done:
Went to admin dashboard --> manage users, and then hovered over user account
tab in the top navigation bar and ensured that part of it was no longer hidden
by the table in the main content.

(Ran unit tests anyway and they all passed, though I'm assuming changing css
wouldn't affect any of those)

Reviewed at https://reviews.reviewboard.org/r/4597/
Fixes bug 3088

--- a/reviewboard/static/rb/css/common.less
+++ b/reviewboard/static/rb/css/common.less
@@ -579,6 +579,7 @@ form table td {
     padding: 0;
     position: relative;
     white-space: nowrap;
+    z-index: @z-index-account-nav-list;
 
     &:hover {
       background: @headerbar-bg-active;
