--- a/reviewboard/static/rb/css/defs.less
+++ b/reviewboard/static/rb/css/defs.less
@@ -82,6 +82,7 @@
 @z-index-menu: 110;
 @z-index-spinner: 120;
 @z-index-page-overlay: 130;
+@z-index-account-nav-list: 1010;
 
 // Comment flags
 @comment-flag-color: #a1c0e3;
